<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorReviewBackground">

        <ProgressBar
            android:id="@+id/background_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/chart_width"
            android:layout_height="@dimen/chart_width"
            android:indeterminate="false"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/background_review"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.114" />


        <ProgressBar
            android:id="@+id/stats_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/chart_width"
            android:layout_height="@dimen/chart_width"
            android:indeterminate="false"
            android:max="100"
            android:progress="75"
            android:progressDrawable="@drawable/review_total"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.114" />

        <TextView
            android:id="@+id/number_of_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/inside_title"
            android:textSize="@dimen/inside_title_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background_progressbar"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="302dp"
            android:layout_height="82dp"
            android:text="@string/revDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_of_calories"
            app:layout_constraintVertical_bias="0.072" />

        <Button
            android:id="@+id/t"
            android:layout_width="77dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:onClick="addConsumed"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.834"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total"
            app:layout_constraintVertical_bias="0.189" />

        <Button
            android:id="@+id/s"
            android:layout_width="82dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:onClick="addBurned"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.159"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score"
            app:layout_constraintVertical_bias="0.163" />

        <EditText
            android:id="@+id/total"
            android:layout_width="71dp"
            android:layout_height="38dp"
            android:layout_marginEnd="52dp"
            android:layout_weight="1"
            android:hint="@string/total"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.983"
            app:layout_constraintStart_toEndOf="@+id/score"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_weight="1"
            android:hint="@string/score"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:importantForAutofill="no" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>